--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,12 @@
+@font-face{
+    font-family: 'Titel-Display';
+    src: url('public/fonts/Causten-MediumOblique.otf') format('truetype');
+}
+@font-face{
+    font-family:'Price-Display';
+    src: url('public/fonts/Causten-Bold.otf') format('truetype');
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
