--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,6 +6,10 @@
     font-family:'Price-Display';
     src: url('public/fonts/Causten-Bold.otf') format('truetype');
 }
+@font-face{
+    font-family:'Button-Primary';
+    src: url('public/fonts/Causten-ExtraBold.otf') format('truetype');
+}
 
 @tailwind base;
 @tailwind components;
