--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,10 @@
     font-family:'Button-Primary';
     src: url('public/fonts/Causten-ExtraBold.otf') format('truetype');
 }
+@font-face{
+    font-family:'Titel-Secondary';
+    src: url('public/fonts/Causten-BoldOblique.otf') format('truetype');
+}
 
 @tailwind base;
 @tailwind components;
