--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,10 @@
     font-family:'Titel-Secondary';
     src: url('public/fonts/Causten-BoldOblique.otf') format('truetype');
 }
+@font-face{
+    font-family:'Regular-Oblique';
+    src: url('public/fonts/Causten-RegularOblique.otf') format('truetype');
+}
 
 @tailwind base;
 @tailwind components;
